--- a/index.html
+++ b/index.html
@@ -1,1 +1,99 @@
-{% extends 'base.html' %}
+<div class="sticky">
+    <div class="w-screen p-3 px-6 bg-blue-800 text-white shadow-xl">
+      <div class="sm:hidden flex flex-row items-center space-x-3 justify-between">
+        <div>
+          <div class="uppercase py-2 px-4 rounded-md bg-white text-gray-700">
+            <h1>
+              <a href="">Record voice</a>
+            </h1>
+          </div>
+        </div>
+        <div class="text-xl">
+          <i class="fa-solid fa-grip"></i>
+        </div>
+      </div>
+      <div class="sm:flex flex-row items-center justify-between hidden">
+        <div class="flex flex-row space-x-8 items-center">
+          <div class="uppercase py-2 px-4 rounded-md bg-white text-gray-700">
+            <h1>
+              <a href="{{url_for('dashboard_page')}}">Dashboard</a>
+            </h1>
+          </div>
+          <div class="uppercase">
+            <h1>
+              <a href="{{ url_for('home_page') }}">Home</a>
+            </h1>
+          </div>
+          <div class="uppercase">
+            <h1>
+              <a href="{{url_for('record_page')}}">Record Voice</a>
+            </h1>
+          </div>
+        </div>
+        {% if current_user.is_authenticated %}
+          <div class="flex flex-row space-x-5 items-center">
+            <div>
+              <a href=""><p>Remaining tasks: <span class="bg-yellow-500 py-1 px-3 text-white rounded-md">
+                20/20
+              </span></p></a>
+            </div>
+            <div class="flex flex-row space-x-2 items-center border rounded-md px-3 py-1 hover:bg-white hover:text-gray-700">
+              <div>
+                <i class="fa-solid fa-circle-user"></i>
+              </div>
+              <div>
+                <a href="">{{current_user.username}}</a>
+              </div>
+            </div>
+            <div class="flex-row space-x-2 items-center flex">
+              <div>
+                <i class="fa-solid fa-right-from-bracket"></i>
+              </div>
+              <div>
+                <a href="{{url_for('signout_page')}}">Sign out</a>
+              </div>
+            </div>
+          </div>
+        {% else %}
+          <div class="flex flex-row space-x-5 items-center">
+            <div class="flex flex-row space-x-2 items-center border rounded-md px-3 py-1">
+              <div>
+                <i class="fa-solid fa-right-to-bracket"></i>
+              </div>
+              <div>
+                <a href="{{ url_for('signin_page') }}">Sign in</a>
+              </div>
+            </div>
+            <div class="flex-row space-x-2 items-center flex">
+              <div>
+                <i class="fa-solid fa-pen-to-square"></i>
+              </div>
+              <div>
+                <a href="{{url_for('register_page')}}">Register</a>
+              </div>
+            </div>
+          </div>
+        {% endif %}
+      </div>
+    </div>
+    
+    <div class="p-3">
+      {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+          {% for category, message in messages %}
+          <div class="flex-row item-center justify-between alert bg-red-200 rounded-lg py-3 px-10 mb-3 text-center text-red-700 inline-flex items-center w-full alert-dismissible fade show" role="alert">
+            <div class="flex flex-row space-x-3 items-center">
+              <div>
+                <i class="fa-solid fa-circle-xmark"></i>
+              </div>
+              <div>
+                {{message}}
+              </div>
+            </div>
+            <div><button type="button" class="btn-close box-content w-4 h-4 p-1 ml-auto text-red-900 border-none rounded-none opacity-50 focus:shadow-none focus:outline-none focus:opacity-100 hover:text-yellow-900 hover:opacity-75 hover:no-underline" data-bs-dismiss="alert" aria-label="Close">&#x274C;</button></div>
+          </div>
+        {% endfor %}
+        {% endif %}
+      {% endwith %}
+    </div>
+  </div>
